# iAcoli

./: .gitignore  core.py  per.html
iAcoli_core/: CORREÇÕES_AGENTE.md  NOVA_ARQUITETURA.md  README.md  cli_client (2).py  core.py  debug_context.py  debug_json.py  debug_names.py  pyproject.toml  run.py  scanner.py  state.json  test_agent_fix.py  test_agent_improvements.py  test_all_direct.py  test_all_queries.py  test_context_usage.py  test_critical_fix.py  test_direct.py  test_final_validation.py  test_improvements_simple.py  test_simple_direct.py  test_simple_question.py  test_typo.py
iAcoli_core/iacoli_core/: __init__.py  cli.py  config.py  errors.py  localization.py  models.py  output.py  repository.py  scheduler.py  service.py  utils.py
iAcoli_core/iacoli_core.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
iAcoli_core/iacoli_core/agent/: __init__.py  orchestrator.py  orchestrator_backup.py  prompt_builder.py
iAcoli_core/iacoli_core/agent/tools/: availability_manage.md  config_manage.md  events_create.md  events_delete.md  events_find.md  events_manage.md  people_create.md  people_find.md  people_remove.md  people_update.md  recurrence_manage.md  schedule_manage.md  series_create.md  series_manage.md  system_manage.md
iAcoli_core/iacoli_core/webapp/: __init__.py  app.py  container.py  dashboard.py  dependencies.py  schemas.py  serve.py
iAcoli_core/iacoli_core/webapp/api/: __init__.py  agent.py  config.py  events.py  people.py  schedule.py  series.py  system.py
iAcoli_core/iacoli_core/webapp/static/css/: dashboard.css
iAcoli_core/iacoli_core/webapp/static/js/: agent.js  dashboard.js
iAcoli_core/iacoli_core/webapp/templates/: base.html
iAcoli_core/iacoli_core/webapp/templates/dashboard/: agent.html  config.html  events.html  home.html  people.html  schedule.html
web/: chat.html  groqchat.html  index.html
